<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.ucl2017finalscore_keeper.MainActivity">

    <ImageView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/uclfinal"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_Description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/juventus_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="7dp"
                android:text="@string/team_Juventus_name"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="1dp"
                tools:context=".MainActivity">

                <TextView
                    android:id="@+id/team_juve_red_card"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:text="@string/team_red_card"
                    android:textColor="#000000"
                    android:background="#B71C1C"
                    android:textSize="25sp"
                    android:fontFamily="sans-serif"/>

                <TextView
                    android:id="@+id/team_juve_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/team_score"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="#FFFFFF"
                    android:textSize="56sp"
                    android:fontFamily="sans-serif-light"/>

                <TextView
                    android:id="@+id/team_juve_yellow_card"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:padding="12dp"
                    android:text="@string/team_yellow_card"
                    android:textColor="#000000"
                    android:background="#FFD600"
                    android:textSize="25sp"
                    android:fontFamily="sans-serif"/>

            </LinearLayout>

            <Button
                android:id="@+id/team_juventus_goal_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="addOneGoalForJuve"
                android:text="@string/team_goal_button"/>

            <Button
                android:id="@+id/team_juventus_red_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="addOneRedCardForJuve"
                android:text="@string/team_red_button"/>

            <Button
                android:id="@+id/team_juventus_yellow_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="addOneYellowCardForJuve"
                android:text="@string/team_yellow_button"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_red_dark"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/Madrid_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="7dp"
                android:text="@string/team_Madrid_name"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="bold"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="1dp"
                tools:context=".MainActivity">

                <TextView
                    android:id="@+id/team_madrid_yellow_card"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:text="@string/team_yellow_card"
                    android:textColor="#000000"
                    android:background="#FFD600"
                    android:textSize="25sp"
                    android:fontFamily="sans-serif"/>

                <TextView
                    android:id="@+id/team_madrid_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/team_score"
                    android:textColor="#FFFFFF"
                    android:textSize="56sp"
                    android:fontFamily="sans-serif-light"/>

                <TextView
                    android:id="@+id/team_madrid_red_card"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:padding="12dp"
                    android:text="@string/team_red_card"
                    android:textColor="#000000"
                    android:background="#B71C1C"
                    android:textSize="25sp"
                    android:fontFamily="sans-serif"/>


            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="addOneGoalForMadrid"
                android:text="@string/team_goal_button"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="addOneRedCardForMadrid"
                android:text="@string/team_red_button"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="addOneYellowCardForMadrid"
                android:text="@string/team_yellow_button"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="resetScore"
        android:text="@string/reset_button"/>


</RelativeLayout>
